--- a/sass/objects/_objects.cart.scss
+++ b/sass/objects/_objects.cart.scss
@@ -8,12 +8,8 @@
   padding: $spacing-xl $spacing-l;
   background: $colour-framing;
 
-  &__dates {
-    display: flex;
-  }
-
   &__date {
-    flex-basis: 50%;
+
   }
 
   &__delivery-date {
@@ -57,7 +53,7 @@
 .c-tabs {
   position: relative;
   width: 100%;
-  min-height: 12rem;
+  min-height: 16rem;
 }
 
 .c-tab {
@@ -76,6 +72,7 @@
       display: block;
       position: absolute;
       left: 0;
+      width: 100%;
     }
   }
 }
