deanna placeholder update

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -118,7 +118,7 @@
         {% if settings.cart_notes_enable %}
         <div class="l-cart-actions__instructions">
           <label class="l-cart-actions__label" for="CartSpecialInstructions">Specific instructions (optional)</label>
-          <textarea placeholder="I need this before 3pm." name="note" class="l-cart-actions__instruction-text-area" id="CartSpecialInstructions">{{ cart.note }}</textarea>
+          <textarea placeholder="For e.g...Leave with reception" name="note" class="l-cart-actions__instruction-text-area" id="CartSpecialInstructions">{{ cart.note }}</textarea>
         </div>
         {% endif %}
         {% comment %}
@@ -128,8 +128,8 @@
         {% for item in cart.items %}
         {% if item.product.tags contains "custom cookie message" %}
         <div class="l-cart-actions__instructions">
-          <label class="l-cart-actions__label" for="customCookieMessage">Custom message on the cookie (optional)</label>
-          <textarea placeholder="Please write happy birthday on the cookie" name="attributes[custom-cookie-message]" class="l-cart-actions__instruction-text-area" id="customCookieMessage" value="{{ cart.attributes.custom-cookie-message }}">{{ cart.attributes.custom-cookie-message }}</textarea>
+          <label class="l-cart-actions__label" for="customCookieMessage">Custom message on the cake/cookie (optional)</label>
+          <textarea placeholder="For e.g...Please write Happy Birthday on the cake/cookie" name="attributes[custom-cookie-message]" class="l-cart-actions__instruction-text-area" id="customCookieMessage" value="{{ cart.attributes.custom-cookie-message }}">{{ cart.attributes.custom-cookie-message }}</textarea>
         </div>
         {% break %}
         {% endif %}
@@ -142,7 +142,7 @@
         {% if item.product.tags contains "custom box message" %}
         <div class="l-cart-actions__instructions">
           <label class="l-cart-actions__label" for="customBoxMessage">Custom message on the box (optional)</label>
-          <textarea placeholder="Please write happy birthday on the box" name="attributes[custom-box-message]" class="l-cart-actions__instruction-text-area" id="customBoxMessage" value="{{ cart.attributes.custom-box-message }}">{{ cart.attributes.custom-box-message }}</textarea>
+          <textarea placeholder="For e.g...please write, Congrats on the new job Burt! Love Ernie" name="attributes[custom-box-message]" class="l-cart-actions__instruction-text-area" id="customBoxMessage" value="{{ cart.attributes.custom-box-message }}">{{ cart.attributes.custom-box-message }}</textarea>
         </div>
         {% break %}
         {% endif %}
