--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -73,7 +73,12 @@
             <td class="text-right">{{ shipping_method.price | money }}</td>
           </tr>
           {% endfor %}
-
+          {% for attribute in order.attributes %}
+          <tr>
+            <td colspan="4">{{ attribute | first }}: {{ attribute | last }}</td>
+          </tr>
+          {% endfor %}
+          
           {% for tax_line in order.tax_lines %}
             <tr>
               <td colspan="4">{{ 'customer.order.tax' | t }} ({{ tax_line.title }} {{ tax_line.rate | times: 100 }}%)</td>
