--- a/snippets/delivery-date.liquid
+++ b/snippets/delivery-date.liquid
@@ -1,41 +1,4 @@
-{{ '//code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css' | stylesheet_tag }}
-{{ '//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js' | script_tag }}
-
 <div class="l-cart-actions__date">
-    <h3 class="l-cart-actions__date-disclaimer">Please give us at least 12 hours notice. Our courier can't deliver on weekends.</h3>
-    <input class="l-cart-actions__date-input" id="delivery-date" placeholder="Select a delivery date" type="text" name="attributes[delivery-date]" data-error="Please select a delivery date." value="{{ cart.attributes.delivery-date }}" />
+    <label class="l-cart-actions__label" for="delivery-date">Date</label>
+    <input class="l-cart-actions__date-input" id="delivery-date" placeholder="Select delivery date" type="text" name="attributes[delivery-date]" data-error="Please select a delivery date." required="required" value="{{ cart.attributes.delivery-date }}" />
 </div>
-
-<script>
-jQuery(function() {
-  jQuery("#delivery-date").datepicker( {
-    minDate: +0,
-    maxDate: '+2M',
-    beforeShowDay: jQuery.datepicker.noWeekends
-  } );
-});
-
-jQuery(function() {
-  jQuery("#pickup-date").datepicker( {
-    minDate: +0,
-    maxDate: '+2M'
-  } );
-});
-
-jQuery("#delivery-date").click(function() {
-  jQuery("#delivery-date").attr('required', 'required');
-  jQuery("#pickup-date").removeAttr('required');
-  jQuery('#pickup-date').val('');
-});
-
-jQuery("#pickup-date").click(function() {
-  jQuery("#pickup-date").attr('required', 'required');
-  jQuery("#delivery-date").removeAttr('required');
-  jQuery('#delivery-date').val('');
-});
-</script>
-
-{% comment %}
-  To remove days of the week that aren't Saturday and Sunday, use this:
-  http://stackoverflow.com/questions/2968414/disable-specific-days-of-the-week-on-jquery-ui-datepicker
-{% endcomment %}
