add address to pickup

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -108,7 +108,7 @@
                 {% include 'pickup-date' %}
                 {% include 'pickup-time' %}
               </div>
-              <h3 class="l-cart-actions__date-disclaimer">Please give us at least 12 hours notice. Please note that we close at 6pm on Sunday & Tuesdays</h3>
+              <h3 class="l-cart-actions__date-disclaimer">Please give us at least 12 hours notice. Please note that we close at 6pm on Sunday & Tuesdays. </br>Pickup location is <strong>309 Karangahape Road, Auckland.</strong></h3>
             </div>
           </div>
           <div class="c-tab" id="delivery-tab">
