--- a/snippets/pickup-time.liquid
+++ b/snippets/pickup-time.liquid
@@ -1,6 +1,6 @@
 <div class="l-cart-actions__date">
   <label class="l-cart-actions__label" for="pickup-time">Time</label>
-    <select class="l-cart-actions__date-input" id="pickup-time" placeholder="Select pick up time" name="attributes[pickup-time]" value="{{ cart.attributes.pickup-time }}" required="required"/>
+    <select class="l-cart-actions__date-input" id="pickup-time" placeholder="Select pick up time" name="attributes[pickup-time]" value="{{ cart.attributes.pickup-time }}"/>
       <option value="" disabled selected>Select pickup time</option>
       <option value="11am - 2pm">11am - 2pm</option>
       <option value="2pm - 5pm">2pm - 5pm</option>
